--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 #
-*.json 
-*.cs
+*_.json
+appsettings.json
+
 # User-specific files
 *.rsuser
 *.suo
